added graph, turning to js

--- a/blog/templates/_node.html
+++ b/blog/templates/_node.html
@@ -1,7 +1,7 @@
 <div class="post_container">
 
 	<div class="post_title">{% if node.external %}<a href="{{node.link}}">{% endif %}{{node.title}}{% if node.external %}</a>{% endif %}</div>
-	<div>
+	<div class="node_text">
 		{{node.excerpt|linebreaks}}
 		{% if node.is_long %}
         	<div class="continue">
