--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-{% include '_navlinks.html' %}
-<h4><u>r</u>ita <u>z</u>evallos</h4>
-
-i forgot everything
-
+<div style="float:left">{% include '_navlinks.html' %}</div>
+<h3><u>r</u>ita <u>z</u>evallos</h3>
+<span class="subtitle">>i was worried about forgetting it all<br>>all the while the place was forgetting me</span>
 
 {% endblock %}
