--- a/blog/templates/_navlinks.html
+++ b/blog/templates/_navlinks.html
@@ -1,19 +1,38 @@
-<a class="nav" href="{% url projects %}"><u>p</u>rojects</a>
-<a class="nav" href="{% url stories %}"><u>s</u>tories</a>
-<a class="nav" href="{% url thoughts %}"><u>t</u>houghts</a>
-<a class="nav" href="{% url about %}"><u>a</u>bout</a>
-<a class="nav" href="{% url all_external %}"><u>idea</u> book</a>
-
-<div class="ui-widget">
-  <label for="nodes">Search: </label>
-  <input id="nodes">
+<div class="navdiv">
+<a class="nav" data-path_id="1" href="{% url nodes_by_path 1 %}"><u>p</u>rojects</a>
+<a class="nav" data-path_id="2" href="{% url nodes_by_path 2 %}"><u>s</u>tories</a>
+<a class="nav" data-path_id="3" href="{% url nodes_by_path 3 %}"><u>b</u>log</a>
+<a class="nav" data-path_id="4" href="{% url nodes_by_path 4 %}"><u>a</u>bout</a>
+<a class="nav" data-path_id="5" href="{% url nodes_by_path 5 %}"><u>idea</u> book</a>
 </div>
+
+<!--<div class="ui-widget">-->
+<!--  <label for="nodes">Search: </label>-->
+<!--  <input id="nodes">-->
+<!--</div>-->
 
 <script>
 
     //http://code.tutsplus.com/tutorials/how-to-use-the-jquery-ui-autocomplete-widget--net-10560
 
     $(function() {
+        $('.nav').click(function(e){
+            var path_id = $(this).data('path_id');
+            var url = "/path/"+path_id;
+            $('#main').load(url, function(){
+                $('#main').data('url',url);
+                if (path_id == 1){ //projects
+                    $('#helper').load("helper/"+path_id);
+                    $('#helper').show();
+                } else{
+                    $('#helper').hide();
+                }
+                $('#sidebar').show();
+            })
+            e.preventDefault();
+        })
+
+
       $("#nodes").autocomplete({
         source: "/autocomplete_nodes/",
         minLength: 2,
