--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -5,40 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rita Zevallos</title>
-    <style>canvas { width: 100%; height: 100%; z-index:-1; position:fixed;}</style>
     <link rel="stylesheet" type="text/css" href="/static/css/application.css">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" />
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/three.min.js"></script>
-    <script src="/static/js/application.js"></script>
+    <script src="/static/js/threeoctree.min.js"></script>
+    <script src="/static/js/blog/application.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/canvas.js"></script>
+    <!--<script src="/static/js/canvas.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
   </head>
   <body>
-
-    {% load load_graph %}
-
     <script type='text/javascript'>
-    //var graphJSON = {x% get_graph %};
-    var graph = JSON.parse(graphJSON);
-    console.log('GRAPH COUNT');
-    console.log(graph.count);
+
+    $(function(){
+        initScene(); // sets global variables scene, camera, renderer
+        loadGraph("{% url load_graph %}");
+        animate();
+    })
     </script>
 
-    {% block container %}
-    <div class="container-fluid">
-		    <div class="row" style="{% if landing %} visibility:hidden {% endif %}">
-          {% include '_navlinks.html' %}
+    <div id="container">
+        <div id="graph_loading_text">
+        Loading graph...
         </div>
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-    		{% block content %}{% endblock %}
-      	</div>
+    </div>
+    <div id="sidebar">
+      {% include '_navlinks.html' %}
+      <div id="helper" class="content" style="display:none">
       </div>
     </div>
-    {% endblock %}
+
+    <div class="col-md-6 col-md-offset-3 content" id="main">
+		{% block content %}{% endblock %}
+  	</div>
 
   </body>
 </html>
