--- a/blog/templates/nodes.html
+++ b/blog/templates/nodes.html
@@ -1,6 +1,3 @@
-{% extends "base.html" %}
-{% block content %}
-
 <div class="row">
 	<div class="col-md-9 col-md-offset-3">
 		<h4>{{title}}</h4>
@@ -21,7 +18,7 @@
 	<div class="pagination">
     <span class="step-links">
         {% if nodes.has_previous %}
-            <a href="?page={{ nodes.previous_page_number }}">previous</a>
+            <a id="previous_page_link" href="?page={{ nodes.previous_page_number }}">previous</a>
         {% endif %}
 
         <span class="current">
@@ -29,11 +26,33 @@
         </span>
 
         {% if nodes.has_next %}
-            <a href="?page={{ nodes.next_page_number }}">next</a>
+            <a id="next_page_link" href="?page={{ nodes.next_page_number }}">next</a>
         {% endif %}
     </span>
 </div>
 	</div>
 </div>
 
-{% endblock %}
+<script>
+$(function(){
+    $('#previous_page_link').click(function(e){
+        var curr_url = $('#main').data('url');
+        var url = curr_url + "?page={{ nodes.previous_page_number }}";
+        $('#main').load(url,function(){
+            $('#main').data('url',url);
+            document.body.scrollTop = document.documentElement.scrollTop = 0;
+        });
+        e.preventDefault();
+    })
+
+    $('#next_page_link').click(function(e){
+        var curr_url = $('#main').data('url');
+        var url = curr_url + "?page={{ nodes.next_page_number }}";
+        $('#main').load(url,function(){
+            $('#main').data('url',url);
+            document.body.scrollTop = document.documentElement.scrollTop = 0;
+        });
+        e.preventDefault();
+    })
+})
+</script>
