--- a/blog/templates/path_form.html
+++ b/blog/templates/path_form.html
@@ -3,7 +3,28 @@
 
 <form action="" method="post">
     {% csrf_token %}
-    {{ form }}
+
+    {% if form.errors %}
+        {% for error in form.non_field_errors %}
+            <div class="alert alert-error">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endif %}
+
+    <div class="fieldWrapper">
+        {{ form.title.errors }}
+        <label for="{{ form.title.id_for_label }}">Path title:</label>
+        {{ form.title }}
+    </div>
+
+    <h3>Existing nodes</h3>
+    <div class="fieldWrapper">
+        {{ form.nodes.errors }}
+        {{ form.nodes.label_tag }}
+        {{ form.nodes }}
+    </div>
+
     <input type="submit" value="Submit" />
 </form>
 
