somehow the stupid infinite recursion error fixed itself

--- a/because/templates/because/_nav.html
+++ b/because/templates/because/_nav.html
@@ -23,6 +23,9 @@
         <label class="checkbox">
           <input type="checkbox" id="readCheckbox" value="option3"> Read
         </label>
+        <label class="checkbox" id="scrambleCheckboxContainer" checked="false">
+            <input type="checkbox" id="scrambleCheckbox"> Scramble
+        </label>
         <br>
         <div class="radio">
           <label><input type="radio" id="useGeoButton" name="optradio">Use my geolocation</label>
