--- a/blog/templates/_node.html
+++ b/blog/templates/_node.html
@@ -1,4 +1,4 @@
-<div class="post_container">
+<div class="post_container content">
 
 	<div class="post_title">{% if node.external %}<a href="{{node.link}}">{% endif %}{{node.title}}{% if node.external %}</a>{% endif %}</div>
 	<div class="node_text">
