--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div style="float:left">{% include '_navlinks.html' %}</div>
-<h3><u>r</u>ita <u>z</u>evallos</h3>
+<div class="content">
+<table>
+    <tr>
+        <td>{% include '_navlinks.html' %}</td>
+        <td>
+            <h3><u>r</u>ita <u>z</u>evallos</h3>
 <span class="subtitle">>i was worried about forgetting it all<br>>all the while the place was forgetting me</span>
-
+        </td>
+    </tr>
+</table>
+</div>
 {% endblock %}
