--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <div class="col-md-6 col-md-offset-3 content" id="main">
+    <div class="col-md-6 col-md-offset-3" id="main">
 		{% block content %}{% endblock %}
   	</div>
 
