--- a/blog/templates/nodes.html
+++ b/blog/templates/nodes.html
@@ -1,47 +1,14 @@
-<div class="content">
-	<h4>{{title}}</h4>
-</div>
+{% include 'nodes_page.html' with nodes=nodes %}
 
-{% for node in nodes.object_list %}
-	{% include '_node.html' with node=node %}
-{% endfor %}
-
-<div class="pagination content">
-<span class="step-links">
-    {% if nodes.has_previous %}
-        <a id="previous_page_link" href="?node_page={{ nodes.previous_page_number }}&path_page={{ paths.previous_page_number }}">previous</a>
-    {% endif %}
-
-    <span class="current">
-        Page {{ nodes.number }} of {{ nodes.paginator.num_pages }}.
-    </span>
-
-    {% if nodes.has_next %}
-        <a id="next_page_link" href="?node_page={{ nodes.next_page_number }}&path_page={{ paths.next_page_number }}">next</a>
-    {% endif %}
-</span>
-</div>
+<script>$.endlessPaginate({
+        paginateOnScroll: true,
+            paginateOnScrollMargin: 20,
+            paginateOnScrollChunkSize: 3,
+            });
+            </script>
 
 <script>
 $(function(){
-    $('#previous_page_link').click(function(e){
-        var curr_url = $('#main').data('url');
-        var url = curr_url + "?page={{ nodes.previous_page_number }}";
-        $('#main').load(url,function(){
-            $('#main').data('url',url);
-            document.body.scrollTop = document.documentElement.scrollTop = 0;
-        });
-        e.preventDefault();
-    })
-
-    $('#next_page_link').click(function(e){
-        var curr_url = $('#main').data('url');
-        var url = curr_url + "?page={{ nodes.next_page_number }}";
-        $('#main').load(url,function(){
-            $('#main').data('url',url);
-            document.body.scrollTop = document.documentElement.scrollTop = 0;
-        });
-        e.preventDefault();
-    })
+    $('#helper').html('<h3>{{title}}</h3>');
 })
 </script>
