--- a/blog/templates/projects.html
+++ b/blog/templates/projects.html
@@ -1,3 +1,6 @@
+{% extends base_template %}
+{% block content %}
+
 <table>
     <tr>
         <td class="screenshot_container">
@@ -67,3 +70,5 @@ $(function(){
     })
 })
 </script>
+
+{% endblock %}
