--- a/blog/templates/node_form.html
+++ b/blog/templates/node_form.html
@@ -1,3 +1,6 @@
+{% extends base_template %}
+{% block content %}
+
 <form id="node_form" action="/node/new" method="post">
     {% csrf_token %}
 
@@ -56,3 +59,5 @@
         return false;
     });
 </script>
+
+{% endblock %}
