got pagination for paths working

--- a/blog/templates/_node.html
+++ b/blog/templates/_node.html
@@ -37,7 +37,7 @@
 	</div>
 </div>
 
-// <script>
+<script>
     $(function(){
         $('.continue_link_{{node.id}}').click(function(e){
             var container = $(this).closest('.node_text');
@@ -45,4 +45,4 @@
             e.preventDefault();
         })
     })
-// </script>
+</script>
