--- a/blog/templates/nodes_page.html
+++ b/blog/templates/nodes_page.html
@@ -1,6 +1,7 @@
 {% load endless %}
 
-{% lazy_paginate nodes %} <!--put the 3 back ones you figure out what's wrong -->
+{% lazy_paginate 7 nodes %}
 {% for node in nodes %}
 	{% include '_node.html' with node=node %}
 {% endfor %}
+{% show_more %}
